2007-05-23  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:line-regexp): bug #10792: updated regexp

2007-05-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el: fixed #10613, wrong comparsion of emacs major-version

2007-05-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-test.el (rails-test:line-regexp): patch #10532, allows '-' to occur in the errror filepath (thanks Peter Williams)

2007-04-27  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el: raise a error if emacs-rails run on old version of Emacs (less 22).

	* rails-ruby.el: check available flymake before setup ruby-flymake.

2007-04-25  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-speedbar-feature.el (rails-speedbar:expand-directory)
	(rails-speedbar:display): updated view mode of "views".

	* rails-compat.el (try-complete-abbrev): don't expand a snippet inside comments or strings.

2007-04-20  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-core.el (rails-core:menu-letters-list)
	(rails-core:prepare-menu): created, append a prefix to each label of menu-item from MENU.

2007-04-19  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-speedbar-feature.el (rails-speedbar:expand-tags): append list of templates in controllers
	(rails-speedbar:line-directory): created

	* rails-core.el (rails-core:helper-file): append the test/test_helper
	(rails-core:views-dir): strip the "_controller" sufix
	(rails-core:helpers): added the test/test_helper support

	* rails-speedbar-feature.el (rails-speedbar:line-directory)
	(rails-speedbar:root, rails-speedbar:in-root): created
	(rails-speedbar-feature:install): install speedbar-mode-line-functions

	* rails-ruby.el (completion-dynamic-syntax-alist): removed

	* rails-core.el (rails-core:class-by-file): updated

2007-04-18  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el (ruby-mode-hook): removed predictive-prog-mode, it will incorect work in latest CVS builds of Emacs

2007-04-13  Dmitry Galinsky  <dima.exe@gmail.com>
